--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ markdown: kramdown
 # markdown에서 불편한 사항을 개선한 형태
 
 # Website info
-title: IT Blog
+title: "IT Blog"
 # 자신의 blog title.
 
 baseurl: /
 
-description: Development & Technical Training
+description: "Development & Technical Training"
 # blog home에 표시될 blog에 대한 전반적인 설명.
 
 #cover: assets/built/images/blog-cover.png
