--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "Development & Technical Training"
 # favicon으로 사용할 image
 
 # Social info
-navigation: True
+#navigation: True
 # Navigation bar link를 보여줄건지 여부
 
 #subscribers: True
@@ -31,13 +31,13 @@ navigation: True
 # 검색기능으로 대체하기 위해서
 # `_includes/subscribe-form.html` 파일의 수정이 필요합니다
 
-twitter:
-facebook:
+#twitter:
+#facebook:
 # 만약 twitter와 facebook을 이용하면 username을 입력
 
 # Disqus
-disqus: True
-disqus_shortname: sunghoons-blog
+#disqus: True
+#disqus_shortname: sunghoons-blog
 # disqus는 온라인 댓글 시스템. 댓글 기능을 사용하기 위해
 # disqus를 이용할 것인지 여부와 만약 사용하면
 # disqus shortname을 입력 ( disqus username이 아님 )
