--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: guitarhyo
 description: WebDeveloper
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://guitarhyo.github.io/images/g-512.png
 #
 # Flags below are optional
 #
